# Caso-de-estudio-El-buen-trigo

./: Administrador.cpp  Administrador.h  BaseDeDatos.cpp  BaseDeDatos.h  CMakeLists.txt  ControladorGeneral.cpp  ControladorGeneral.h  EncargadoInventario.cpp  EncargadoInventario.h  Ingredientes.cpp  Ingredientes.h  Inventario.cpp  Inventario.h  Panadero.cpp  Panadero.h  Panes.cpp  Panes.h  README.md  Recetario.h  Recetas.h  Stock.cpp  Stock.h  Vista.cpp  Vista.h  VistaAdministrador.cpp  VistaAdministrador.h  VistaEncargadoInventario.cpp  VistaEncargadoInventario.h  VistaPanadero.cpp  VistaPanadero.h  main.cpp  reporte_inventario.txt
Controlador/: Administrador.cpp  Administrador.h  BaseDeDatos.cpp  BaseDeDatos.h  ControladorGeneral.cpp  ControladorGeneral.h  EncargadoInventario.cpp  EncargadoInventario.h  Panadero.cpp  Panadero.h
Datos/: ingredientes.txt  recetas.txt  reporte_inventario.txt  stock.txt
Modelo/: Ingredientes.cpp  Ingredientes.h  Inventario.cpp  Inventario.h  InventarioIngredientes.cpp  InventarioIngredientes.h  InventarioPanes.h  InventarioRecetas.cpp  InventarioRecetas.h  Panes.cpp  Panes.h  Recetario.cpp  Recetas.cpp  Recetas.h  Stock.cpp  Stock.h
Vista/: AdvertenciasConsola.h  Consola.h  Vista.cpp  Vista.h  VistaAdministrador.cpp  VistaAdministrador.h  VistaEncargadoInventario.cpp  VistaEncargadoInventario.h  VistaPanadero.cpp  VistaPanadero.h
